# subnetter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  kind.yml  pyproject.toml
app/: main.py
app/api/: ips.py  prefixes.py  schemas.py  tenants.py  vrfs.py
app/core/: deps.py  errors.py  health.py  idempotency.py  pagination.py  settings.py
app/db/: db.py  models.py
app/services/: ipam.py
cli/: go.mod  main.go
cli/cmd/: ip_next.go  prefix_carve.go  prefix_create.go  root.go  seed.go  tenant_create.go  vrf_create.go
cli/internal/client/: client.go  types.go
k8s/: api.yml  configmap.yml  namespace.yml  postgres.yml  secret.yml
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: prometheus.yml
